--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,7 +1,8 @@
 FROM python:3.13
 
-WORKDIR /app
+RUN apt-get update && apt-get install -y git
+
+WORKDIR /workspace/backend
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-
