--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,6 +1,8 @@
 FROM node:lts
 
-WORKDIR /app
+RUN apt-get update && apt-get install -y git
+
+WORKDIR /workspace/frontend
 
 COPY package.json package-lock.json ./
 RUN npm install
