--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -4,5 +4,5 @@ RUN apt-get update && apt-get install -y git
 
 WORKDIR /workspace/frontend
 
-COPY package.json package-lock.json ./
+COPY package.json ./
 RUN npm install
