--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,41 +1,22 @@
 {
-  "name": "frontend",
+  "name": "profitfolio",
   "private": true,
-  "type": "module",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --fix"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@fontsource/roboto": "5.2.7",
-    "@mdi/font": "7.4.47",
-    "pinia": "^3.0.3",
-    "vue": "^3.5.21",
-    "vue-router": "^4.5.1",
-    "vuetify": "^3.10.1"
+    "react-dom": "^19.2.0",
+    "react": "^19.2.0",
+    "recharts": "^3.4.1"
   },
   "devDependencies": {
-    "@tsconfig/node22": "^22.0.0",
-    "@types/node": "^22.9.0",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/tsconfig": "^0.8.1",
-    "eslint": "^9.35.0",
-    "eslint-config-vuetify": "^4.2.0",
-    "npm-run-all2": "^8.0.4",
-    "sass-embedded": "^1.92.1",
-    "typescript": "~5.9.2",
-    "unplugin-auto-import": "^20.1.0",
-    "unplugin-fonts": "^1.4.0",
-    "unplugin-vue-components": "^29.0.0",
-    "unplugin-vue-router": "^0.15.0",
-    "vite": "^7.1.5",
-    "vite-plugin-vue-layouts-next": "^1.0.0",
-    "vite-plugin-vuetify": "^2.1.2",
-    "vue-tsc": "^3.0.7"
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0"
   }
 }
